--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -1,8 +1,8 @@
 <div class="card mx-auto" style="width: 18rem">
-    <h5 class="card-header">Team Profile<br /><br />Manager</h5>
+    <h5 class="card-header">Team Profile<br /><br />Engineer</h5>
     <ul class="list-group list-group-flush">
         <li class="list-group-item">ID</li>
         <li class="list-group-item">email</li>
-        <li class="list-group-item">Office Phone</li>
+        <li class="list-group-item">GitHub</li>
     </ul>
 </div>
